--- a/AULA 07/index.html
+++ b/AULA 07/index.html
@@ -1,35 +1,161 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AULA07</title>
+    <title>aula07</title>
 </head>
 <body>
-    <theader>
-        <table border="1">
-<tr>
-    <th colspan="2">Brasil</th>
-</tr>
-<tr>
-    <th>Estado</th>
-    <th>Time</th>
-</tr>
-    </theader>
-    <tbody>
-        <td rowspan="5">Sao Paulo</td>
+    <table border="1">
+<thead>
+       <tr>
+            <th colspan="2">Brasil</th>
+       </tr>
         <tr>
-            <td colspan="2">Corinthians</td>
+       <th>Estado</th>
+       <th>Time</th>
+    </tr>
+</thead>
+
+<tbody>
+    <td rowspan="5">São Paulo</td>
+    <tr>
+       <td>Corinthians</td>
+    </tr>
+    <tr>
+        <td>Palmeiras</td>
+    </tr>
+    <tr>
+        <td>São Paulo</td>
+    </tr>
+    <tr>
+        <td>Santos</td>
+    </tr>
+    <tr>
+        <td rowspan="5">Rio de Janeiro</td>
+    </tr>
+    <tr>
+        <td>Flamengo</td>
+    </tr>
+    <tr>
+        <td>Fluminense</td>
+    </tr>
+    <tr>
+        <td>Vasco</td>
+    </tr>
+    <tr>
+        <td>Botafogo</td>
+    </tr>
+</tbody>
+</table>
+<br>
+<br>
+<hr>
+<br>
+<br>
+<table border="1">
+    <thead>
+        <tr>
+            <th rowspan="2">Funcionário</th>
+            <th rowspan="2">Semestre</th>
+            <th colspan="2">Gastos</th>
+            <th colspan="2">Lucros</th>
+        </tr>
+        <tr>
+            <th>Liquido</th>
+            <th>Bruto</th>
+            <th>Liquido</th>
+            <th>Bruto</th>
+        </tr>
+    </thead>
+    <tbody>
+        <tr>
+            <td rowspan="2">João</td>
+            <td>1°</td>
+            <td>1000</td>
+            <td>1200</td>
+            <td>200</td>
+            <td>300</td>
+        </tr>
+        <tr>
+            <td>2°</td>
+            <td>1000</td>
+            <td>1200</td>
+            <td>200</td>
+            <td>300</td>
+        </tr>
+        <tr>
+            <td rowspan="2">Maria</td>
+            <td>1°</td>
+            <td>1000</td>
+            <td>1200</td>
+            <td>200</td>
+            <td>300</td>
+        </tr>
+        <tr>
+            <td>2°</td>
+            <td>1000</td>
+            <td>1200</td>
+            <td>200</td>
+            <td>300</td>
         </tr>
     </tbody>
-   
-
-
-
-
-
 </table>
-
+<br>
+<br>
+<hr>
+<br>
+<br>
+<table border="1">
+    <thead>
+        <tr>
+            <th>Produto</th>
+            <th colspan="3">Análise de Preço</th>
+        </tr>
+        <tr>
+            <th rowspan="5">Caixa JBL Bump!</th>
+        </tr>
+        <tr>
+            <th rowspan="2">Submarino</th>
+            <th>Boleto</th>
+            <th>R$ 300,00</th>
+        </tr>
+        <tr>
+            <th>Cartão</th>
+            <th>R$ 350,00</th>
+        </tr>
+        <tr>
+            <th rowspan="2">Amazon</th>
+            <th>Boleto</th>
+            <th>R$ 310,00</th>
+        </tr>
+        <tr>
+            <th>Cartão</th>
+            <th>R$ 340,00</th>
+        </tr>
+        <tr>
+            <th rowspan="5">Apple Watch SE</th>
+        </tr>
+        <tr>
+            <th rowspan="2">Submarino</th>
+            <th>Boleto</th>
+            <th>R$ 2300,00</th>
+        </tr>
+        <tr>
+            <th>Cartão</th>
+            <th>R$2500,00</th>
+        </tr>
+        <tr>
+            <th rowspan="2">Amazon</th>
+            <th>Boleto</th>
+            <th>R$ 2350,00</th>
+        </tr>
+        <tr>
+            <th>Cartão</th>
+            <th>R$ 2350,00</th>
+        </tr>
+    </thead>
+</table>
 </body>
 </html>
