--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -144,7 +144,7 @@
   <h2>Contato</h2>
   <form>
     <label>Nome completo:</label>
-    <input type="text" name= "Willian dos Santos Silva" required>
+    <input type="text" name= "name" required>
 
     <label>Telefone:</label>
     <input type="tel" name="number" required>
