--- a/AULA 14/index.html
+++ b/AULA 14/index.html
@@ -39,6 +39,7 @@
             text-align: left;
         }
     </style>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1 class="tit">Exemplo de Caixa</h1>
@@ -61,5 +62,13 @@
 
     <h2 class="capleft">Capitulo 2</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati, molestiae culpa! Quia quam ab aperiam commodi odio officiis consequuntur aliquid excepturi, veniam voluptas exercitationem natus porro nostrum corporis sint facilis?</p>
+    
+
+
+    <h1>Exemplo de Hover</h1>
+    <p>Passe O Mouse sobre o texto abaixo</p>
+    <div>
+        <p>Passe o mouse AQUI</p>
+    </div>
 </body>
 </html>
